# ProjetAnnuel2A

./: CMakeLists.txt  DescApp1  LICENSE  Mission 1  README.md  functions.c  functionsGtk.c  functionsXml.c  main.c  protoXml.h  protolib.h  uiPersonnel.glade
Mission1/QRCodeMaker/: CMakeLists.txt  main.c
Mission1/QRCodeMaker/lib/: qrcode.c  qrcode.h
